Add Titles and Content in Blog Section

--- a/assets/blog.html
+++ b/assets/blog.html
@@ -47,8 +47,10 @@
           <article>
               <img src="./images/Card_img.jpg" alt="">
               <div class="text">
-                  <h3 >Title 1</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+                  <h3 >Industrial Internet of Things (IIoT)</h3>
+                  <p>Industrial Internet of Things (IIoT) is a way to digital transformation in manufacturing. Industrial IoT employs a network of sensors to collect critical production data and uses cloud software to turn this data into valuable insights about the efficiency of the manufacturing operations
+                    Bsquare annual IIoT maturity survey reports that 86% of manufacturers have already adopted IIoT solutions, and 84% of them find IIoT extremely effective.
+                  </p>
                   <button>Read More</button>
               </div>
           </article>
@@ -56,8 +58,10 @@
           <article>
             <img src="./images/Card_img.jpg" alt="">
             <div class="text">
-                <h3 >Title 2</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+                <h3 >IoT value for Telecoms</h3>
+                <p>According to recent research, pursuing the opportunities in each of the above service directions, telecom companies may boost their revenues by 500% over a five-year period. And telecom services providers have already started leveraging the IoT technology and achieved improvements in their customer retention rates, as well as acquired new customers. For instance, the same report says that having introduced their own IoT platform, AT&T managed to sign about 300 new deals in a single year.
+
+                    Other industry players have, too, started using IoT as an opportunity to conquer new markets. For instance, ScienceSoft’s customer introduced an application for vehicle on-board diagnostics to the market of connected cars, which transportation companies now eagerly use. Another customer of ScienceSoft’s launched a new service for pet owners to monitor their pets’ locations with the help of wearable trackers managed via a mobile app.</p>
                 <button>Read More</button>
             </div>
         </article>
@@ -65,8 +69,12 @@
         <article>
             <img src="./images/Card_img.jpg" alt="">
             <div class="text">
-                <h3 >Title 3</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+                <h3 >Medical IoT</h3>
+                <p>Skin cancer incidence has increased significantly over the past few decades and, according to the World Health Organization, one in five Americans will develop skin cancer at some point in their life. However, if the condition is identified at an early stage, the patient’s chances of survival are higher.
+
+                    To make this early detection possible, a team of researchers developed an AI solution dubbed Doctor Hazel. The solution takes the form of an app that analyzes an image of a patient’s skin and compares it to a large database of images with skin in cancerous conditions. In case there’s a match, the app immediately suggests that the patient sees a doctor in person.
+                    
+                    Today, the solution provides 85% accuracy, but as its image database is constantly growing, the accuracy is gradually increasing, too</p>
                 <button>Read More</button>
             </div>
         </article>
@@ -74,8 +82,10 @@
         <article>
             <img src="./images/Card_img.jpg" alt="">
             <div class="text">
-                <h3 >Title 4</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+                <h3 >Waste Management</h3>
+                <p>Well, IoT reaches into nearly every aspect of life and IoT is the solution to this over lasting problem. Conventional waste collection is costly because a fleet of garbage trucks travel throughout the city to collect garbage and without the help of any data on litter, garbage trucks have to ensure following routes specified to them and along the way they find some bins that are overfilled and some just empty. Now, with the help of IoT solutions a sensor can be embedded into these garbage bins and these sensors to measure the amount of garbage present in the bin and dumpsters. Machine learning will once again play a vital part as it will monitor information gathered by the sensors and machine learning will be able to predict when the bin will be full. This method is very cost-friendly and impacts the environment on great levels including our thirst for a smart city.
+                    “With this technology we don’t just save manpower, we also impact the environment considerably and provide customer satisfaction”
+                </p>
                 <button>Read More</button>
             </div>
         </article>
