--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <ul class="nav-links">
         <li class="nav-link"><a href="#">Home</a></li>
         <li class="nav-link"><a href="#about">About</a></li>
-        <li class="nav-link"><a href="#portfolio">Projects</a></li>
+        <li class="nav-link"><a href="#inclusion">Projects</a></li>
         <li class="nav-link"><a href="assets/blog.html">Blog</a></li>
       </ul>
       <div id="nav-btn" target="_blank" rel="noopener" onclick="window.open('mailto:kadariprathima4@gmail.com');">
@@ -206,7 +206,7 @@
   </div>
   <!-- ============= About Section Ends =============== -->
   <!-- ============= Inclusion Section  =============== -->
-  <section style="margin:15% 0 20% 0;">
+  <section style="margin:15% 0 20% 0;" id="inclusion"> 
     <h2 style="text-align:center;">Inclusion</h2>
     <p style="text-align:center;">Here, are the scripts that are included in our project</p>
     <div class="row">
