feat: project button fixed

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   </div>
   <!-- ============= About Section Ends =============== -->
   <!-- ============= Inclusion Section  =============== -->
-  <section style="margin:15% 0 20% 0;">
+  <section style="margin:15% 0 20% 0;" id="portfolio">
     <h2 style="text-align:center;">Inclusion</h2>
     <p style="text-align:center;">Here, are the scripts that are included in our project</p>
     <div class="row">
