--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <section class="section about" id="about">
 
 
-      <div class="about-img">
+      <div class="about-img" data-tilt data-tilt-scale="1.1">
         <img src="assets/images/hero.png" alt="Prathima-Kadari-">
       </div>
 
