Improved Mobile view of website

--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
         <div class="col-lg-6 col-md-12 col-12 servicediv">
           <div class="row">
             <!--- <div class="col-lg-2 col-2 service-icons"><i class=" fas fa-phone"></div> -->
-            <div class="col-lg-10 col-10">
+            <div class="col-lg-10 col-10 mx-auto">
               <br>
-              <h3 style="margin-left:10vw">Data ownership & portability</h3>
+              <h3 style="text-align: center;">Data ownership & portability</h3>
               <p>Often beginners don’t think about this, but being in the industry for over two decades, we pay extra
                 attention to terms of service and privacy policy to ensure that you own your data, and it’s portable
                 should you need to switch.</p>
@@ -291,16 +291,16 @@
           </div>
           <div class="row">
             <!--- <div class="col-lg-2 col-2 service-icons"><i class=" fas fa-phone"></div> -->
-            <div class="col-lg-10 col-10">
-              <h3 style="margin-left:10vw">Design & Features </h3>
+            <div class="col-lg-10 col-10 mx-auto">
+              <h3 style="text-align: center;">Design & Features </h3>
               <p> We offer everyone a good selection of professional website templates along with flexibility to add
                 additional features like Google Analytics, CRM, third-party marketing tools, etc.</p>
             </div>
           </div>
           <div class="row">
             <!--- <div class="col-lg-2 col-2 service-icons"><i class=" fas fa-phone"></div> -->
-            <div class="col-lg-10 col-10">
-              <h3 style="margin-left:10vw">Support 24/7</h3>
+            <div class="col-lg-10 col-10 mx-auto">
+              <h3 style="text-align: center;">Support 24/7</h3>
               <p>Here, You will get 24/7 customer support. Because we value each and every customer.</p>
             </div>
           </div>
