--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
   <!-- ============ General Meta Data ============= -->
   <title>IOT-Spot</title>
+  <link rel="icon" href="/assests/images/image-removebg-preview (20).png">
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
