Fixed contact us button - issue #266

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <a href="#aboutus" style="text-decoration:none;"><div class="btn primary" style="color:white; font-size:1.7rem; font-weight:700; text-decoration:none;">
             About
         </div></a>
-        <a href="#myportfolio" style="text-decoration:none;"><div class="btn primary" style="color:white; font-size:1.7rem; font-weight:700; text-decoration:none;">
+        <a href="#contact_us" style="text-decoration:none;"><div class="btn primary" style="color:white; font-size:1.7rem; font-weight:700; text-decoration:none;">
           Contact Us
       </div></a>
         </div>
@@ -549,7 +549,9 @@
 
   <!-- end news letter section -->
   <!-- =========== Footer Section Begins ============ -->
+  <section id="contact_us">
   <footer class="footer">
+  
 
    
 
@@ -595,7 +597,7 @@
       </form>
 
     </div>
-
+    
     
 
 
@@ -606,7 +608,7 @@
       <i class="fa fa-angle-up up-btn"></i>
     </a>
 
-
+  </section>
   </footer>
   <!-- =========== Footer Section Ends ============== -->
 
