Added links for the projects section and also added a red hover for the links

--- a/index.html
+++ b/index.html
@@ -207,21 +207,21 @@
     <p style="text-align:center;">Here, are the scripts that are included in our project</p>
     <div class="row">
       <div class="column">
-        <h3>8051</h3>
-        <h3>ARM</h3>
-        <h3>Adafruit</h3>
-        <h3>Arduino</h3>
-        <h3>Atmel</h3>
-        <h3>Beagle</h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/8051">8051</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/ARM">ARM</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Adafruit">Adafruit</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Arduino">Arduino</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Atmel">Atmel</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Beagle">Beagle</a></h3>
 
       </div>
       <div class="column">
-        <h3>ESP32</h3>
-        <h3>ESP8266</h3>
-        <h3>Node MCU</h3>
-        <h3>PIC</h3>
-        <h3>Raspberry Pi</h3>
-        <h3>Real-Time Scripts</h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/ESP32">ESP32</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/ESP8266">ESP8266</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Node MCU">Node MCU</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/PIC">PIC</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Raspberry Pi">Raspberry Pi</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Real-Time Scripts">Real-Time Scripts</a></h3>
       </div>
     </div>
   </section>
