--- a/assets/blog.html
+++ b/assets/blog.html
@@ -157,7 +157,7 @@
         <hr width="100%" />
         <p>Made with ❤️ by Prathima Kadari</p>
         <a href="#" class="up-btn-wrapper" alt="Go to top">
-            <i class="fa fa-angle-up up-btn"></i>
+            <i class="fa fa-angle-up up-btn" style="color: var(--dim-white); padding: 4px;"></i>
         </a>
 
 
