--- a/assets/blog.html
+++ b/assets/blog.html
@@ -163,7 +163,7 @@
 
     </footer>
     <!-- =========== Footer Section Ends ============== -->
-    <script>
+<!--     <script>
         (window).scroll(function() {
             if ((window).scrollTop() > 10) {
                 ('.nav-bar').addClass('floatingNav');
@@ -171,7 +171,8 @@
                 ('.nav-bar').removeClass('floatingNav');
             }
         });
-    </script>
+    </script> -->
+<!-- ============= End of File ========================= -->
 
 </body>
 
