Improved Hover effects in Navbar

--- a/IoT-Spot Website/index.html
+++ b/IoT-Spot Website/index.html
@@ -100,7 +100,7 @@
         <li class="nav-link"><a target="_blank" href="assets/blog.html">Blog</a></li>
       </ul>
       <div id="nav-btn" target="_blank" rel="noopener" onclick="window.open('mailto:sharmaprerna0052@gmail.com');">
-        <p>Let's Connect</p>
+        <p class="connect">Let's Connect</p>
       </div>
     </div>
 
