--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
   <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
   <!-- Preloader CSS -->
-  <link rel="stylesheet" href="./assets/css/preloader.css">
+  <link rel="stylesheet" href="./IoT-Spot Website/assets/css/preloader.css">
   <!-- Hamburger Menu CSS-->
-  <link rel="stylesheet" href="./assets/css/hamburger.css">
+  <link rel="stylesheet" href="./IoT-Spot Website/assets/css/hamburger.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./IoT-Spot Website/assets/css/style2.css">
 
   <!-- ============= Linking CSS Ends ============= -->
   <meta name="google-site-verification" content="OyCUsqz2PLKxLtFjG2BpOVhGnoHwrS98F7tSncv9Z-Y" />
@@ -104,7 +104,7 @@
         <li class="nav-link"><a href="assets/blog.html">Blog</a></li>
       </ul>
       <div id="nav-btn" target="_blank" rel="noopener" onclick="window.open('mailto:kadariprathima4@gmail.com');">
-        <p>Let's Connect</p>
+        <p class="connect">Let's Connect</p>
       </div>
     </div>
 
