Improving Inclusion section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <!-- Hamburger Menu CSS-->
   <link rel="stylesheet" href="./IoT-Spot Website/assets/css/hamburger.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="./IoT-Spot Website/assets/css/style2.css">
+  <link rel="stylesheet" href="./IoT-Spot Website/assets/css/style.css">
 
   <!-- ============= Linking CSS Ends ============= -->
   <meta name="google-site-verification" content="OyCUsqz2PLKxLtFjG2BpOVhGnoHwrS98F7tSncv9Z-Y" />
@@ -202,26 +202,26 @@
   </div>
   <!-- ============= About Section Ends =============== -->
   <!-- ============= Inclusion Section  =============== -->
-  <section style="margin:15% 0 20% 0;">
+  <section class="inclusion" style="margin:7% 0">
     <h2 style="text-align:center;">Inclusion</h2>
     <p style="text-align:center;">Here, are the scripts that are included in our project</p>
     <div class="row">
       <div class="column">
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/8051" target="_blank">8051</a></h3>
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/ARM" target="_blank">ARM</a></h3>
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Adafruit" target="_blank">Adafruit</a></h3>
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Arduino" target="_blank">Arduino</a></h3>
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Atmel" target="_blank">Atmel</a></h3>
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Beagle" target="_blank">Beagle</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/8051" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> 8051</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/ARM" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> ARM</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Adafruit" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> Adafruit</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Arduino" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> Arduino</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Atmel" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> Atmel</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Beagle" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> Beagle</a></h3>
 
       </div>
       <div class="column">
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/ESP32" target="_blank">ESP32</a></h3>
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/ESP8266" target="_blank">ESP8266</a></h3>
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Node MCU" target="_blank">Node MCU</a></h3>
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/PIC" target="_blank">PIC</a></h3>
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Raspberry Pi" target="_blank">Raspberry Pi</a></h3>
-        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Real-Time Scripts" target="_blank">Real-Time Scripts</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/ESP32" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> ESP32</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/ESP8266" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> ESP8266</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Node MCU" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> Node MCU</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/PIC" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> PIC</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Raspberry Pi" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> Raspberry Pi</a></h3>
+        <h3><a href="https://github.com/prathimacode-hub/IoT-Spot/tree/main/Real-Time Scripts" target="_blank"><img src="IoT-Spot Website/assets/check-circle.svg" alt=""> Real-Time Scripts</a></h3>
       </div>
     </div>
   </section>
@@ -561,7 +561,7 @@
         <div id="footer-logo" onclick="window.location.href = '#';">
           <h3>&lt;<span>IOT-Spot</span>&gt;</h3>
         </div>
-        <h3 class="form-head">We're here to help and answer any questions you might have.<BR>We have forward to hearing
+        <h3 class="form-head">We're here to help and answer any questions you might have.<BR>We look forward to hearing
           from you ❤</h3>
         <div>
           <a href="https://twitter.com/prathimak88" target="_blank" rel="noopener" alt="twitter">
