--- a/index.html
+++ b/index.html
@@ -347,58 +347,12 @@
 
 
   <!--*******project*********-->
-  <section class="project-work section">
+  <section class="project-work sections">
     <div class="container headings text-center  ">
       <p class="text-center font-weight-bold">MORE THAN 2000 WEBSITES CREATED</p>
     </div>
 
-
-    <div class="container d-flex justify-content-around align-items-center text-center p-50 50">
-
-      <!--<div>
-        <h2><a href="#"><i class="fa fa-download"></i></a></h3>
-          <div class="counter" data-target="1500" style="font-size: 20px;">0</div>
-
-        <h1 class="count">1500</h1> //Without Counter
-        <p>CMS Installation</p> //Without Counter
-
-        <h3>CMS Installation</h3>
-      </div>
-
-      <div>
-        <h2><a href="#"><i class="fas fa-award"></i></a></h3>
-          <div class="counter" data-target="2500" style="font-size: 20px;">0</div>
-
-       <h1 class="count">2500</h1> //Without Counter
-        <p>Awards won</p>//Without Counter
-
-        <h3>Awards won</h3>
-      </div>
-
-      <div>
-        <h2><a href="#"><i class="fa fa-smile-o"></i></a></h3>
-          <div class="counter" data-target="700" style="font-size: 20px;">0</div>
-
-       <h1 class="count">700</h1> //Without Counter
-      <p>Happy Clients</p>  //Without Counter
-
-        <h3>Happy Clients</h3>
-      </div>
-
-      <div>
-        <h2><a href="#"><i class="fa fa-building-o"></i></a></h3>
-          <div class="counter" data-target="500" style="font-size: 20px;">0</div>
-
-        h1 class="count">500</h1> //Without Counter
-       <p>Working On</p> //Without Counter
-
-       <h3>Working On</h3>
-      </div>-->
-
-
-
-      <!--Dynamic Counter Opened-->
-
+    <div class="container d-flex justify-content-around align-items-center text-center">
       <div class="box">
         <h2><a href="#"><i class="fa fa-download"></i></a></h3>
           <h3>
