--- a/IoT-Spot Website/index.html
+++ b/IoT-Spot Website/index.html
@@ -65,7 +65,7 @@
   <!-- Hamburger Menu CSS-->
   <link rel="stylesheet" href="./assets/css/hamburger.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- ============= Linking CSS Ends ============= -->
   <meta name="google-site-verification" content="OyCUsqz2PLKxLtFjG2BpOVhGnoHwrS98F7tSncv9Z-Y" />
