Fixed Issue No 266

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <a href="#aboutus" style="text-decoration:none;"><div class="btn primary" style="color:white; font-size:1.7rem; font-weight:700; text-decoration:none;">
             About
         </div></a>
-        <a href="#myportfolio" style="text-decoration:none;"><div class="btn primary" style="color:white; font-size:1.7rem; font-weight:700; text-decoration:none;">
+        <a href="#contact" style="text-decoration:none;"><div class="btn primary" style="color:white; font-size:1.7rem; font-weight:700; text-decoration:none;">
           Contact Us
       </div></a>
         </div>
@@ -502,7 +502,7 @@
 
   <!-- end news letter section -->
   <!-- =========== Footer Section Begins ============ -->
-  <footer class="footer">
+  <footer class="footer" id ="contact">
 
    
 
