--- a/IoT-Spot Website/index.html
+++ b/IoT-Spot Website/index.html
@@ -29,9 +29,9 @@
 
   <!-- ============= Linking Favicon ============== -->
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/android-chrome-512x512.png">
 
   <!-- ========== Linking Favicon Ends =========== -->
 
