--- a/index.html
+++ b/index.html
@@ -518,13 +518,13 @@
           from you ❤</h3>
         <div>
           <a href="https://twitter.com/prathimak88" target="_blank" rel="noopener" alt="twitter">
-            <i style="margin-top:6px;" class="fa fa-twitter  footer-i"></i>
+            <i style="margin-top:6px;" class="fa fab-twitter  footer-i"></i>
           </a>
           <a href="https://www.linkedin.com/in/prathima-kadari/" target="_blank" rel="noopener" alt="linkedin">
-            <i class="fa fa-linkedin footer-i"></i>
+            <i class="fa fab-linkedin footer-i"></i>
           </a>
           <a href="https://github.com/prathimacode-hub" target="_blank" rel="noopener" alt="github">
-            <i class="fa fa-github footer-i"></i>
+            <i class="fa fab-github footer-i"></i>
           </a>
         </div>
         <div class="contact-container mail-id" onclick="window.open('mailto:kadariprathima4@gmail.com');">
